# Anvil

./: Cargo.toml  GNUmakefile  README.md  init_srvs.cpio  limine.conf  main  main.py  readme.MD  rustc-ice-2025-10-05T14_57_02-71461.txt
kernel/: Cargo.toml  build.rs  linker-x86_64.ld
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/amd64/: gdt.rs  mod.rs  pic.rs  ports.rs  serial.rs
kernel/src/arch/amd64/acpi/: hpet.rs  madt.rs  main_table_parser.rs  mod.rs  parsed_table.rs
kernel/src/arch/amd64/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/arch/amd64/cpu/: cpuid.rs  frames.rs  mod.rs
kernel/src/arch/amd64/cpu/smp/: macros.rs  mod.rs  percpu.rs  preempt.rs  startup.rs
kernel/src/arch/amd64/interrupts/: base.rs  idt.rs  interrupt_trap.asm  macros.rs  mod.rs  tables.rs
kernel/src/arch/amd64/ipc/: cnode.rs  endpoint.rs  message.rs  mod.rs  notification.rs  object_table.rs
kernel/src/arch/amd64/memory/: mem_subsys_tests.rs  misc.rs  mod.rs  test.rs
kernel/src/arch/amd64/memory/pmm/: abstract_allocator.rs  alloc_pages.rs  buddy.rs  bump_alloc.rs  frame_alloc.rs  frame_area.rs  (+12 more)
kernel/src/arch/amd64/scheduler/: Untitled-1.ini  addr_space.rs  cpu_local.rs  elf.rs  exec_loader.rs  mod.rs  stack.rs  task.rs  task_storage.rs
kernel/src/arch/amd64/timer/: mod.rs
kernel/src/bootinfo/: mod.rs  requests.rs
kernel/src/cmd_args/: mod.rs
kernel/src/cpio_parser/: mod.rs
kernel/src/early_print/: fb_printer.rs  mod.rs
kernel/src/framebuffer/: mod.rs
kernel/src/misc/: registers.rs
kernel/src/selftest/: mod.rs
kernel/src/serial/: mod.rs
(+47 files in other folders)
