[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader = {version = "0.9", features=["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
linked_list_allocator = "0.9.0"
acpi = "5"
pic8259 = "0.10.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]