[package]
name = "limine-rust-template"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
limine = "0.5"
x86_64 = "0.15.4"
volatile = "0.6.1"
spin = "0.10.0"
uart_16550 = "0.4.0"
paste = "1.0"
acpi = "6.0.1"
linked_list_allocator = "0.10.5"
eclipse_framebuffer = "0.1.0"
bitflags = "2.10.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0"

[[bin]]
name = "limine-rust-template"
path = "src/main.rs"
test = false
bench = false